--- a/d012/style.css
+++ b/d012/style.css
@@ -50,13 +50,13 @@ p#h1 > a:hover {
 
 div.parte2 {
     color: white;    
-    background: black url('imagens/background001.jpg') center right/cover no-repeat fixed;       
+    background: black url('imagens/background001.jpg') center center/cover no-repeat fixed;       
     height: 80vh;        
 }
 
 div.parte5 {
     color: white;    
-    background: black url('imagens/background002.jpg') center right/cover no-repeat fixed;       
+    background: black url('imagens/background002.jpg') center center/cover no-repeat fixed;       
     height: 80vh;        
 }
 
