--- a/d012/style.css
+++ b/d012/style.css
@@ -19,8 +19,9 @@ h1 {
     margin: auto;
     padding: 60px;
     font-family: var(--fonte-titulo);
+    font-variant: small-caps;
     font-weight: lighter;
-    font-size: 70px;
+    font-size: 10vw;
 }
 
 h1 > p {    
@@ -33,7 +34,7 @@ div {
     background-color: white;
     text-align: left;
     font-family: var(--fonte-sriracha);
-    font-size: 30px;    
+    font-size: 3.5vw;    
     padding: 80px 0px 80px 20px;   
 }
 
@@ -51,12 +52,14 @@ p#h1 > a:hover {
 div.parte2 {
     color: white;    
     background: black url('imagens/background001.jpg') center center/cover no-repeat fixed;       
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.363);
     height: 80vh;        
 }
 
 div.parte5 {
     color: white;    
-    background: black url('imagens/background002.jpg') center center/cover no-repeat fixed;       
+    background: black url('imagens/background002.jpg') center center/cover no-repeat fixed;    
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.363);
     height: 80vh;        
 }
 
